completed Tao Bao and Tmall Login Handler

--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.7.26</version>
-      <scope>test</scope>
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
@@ -101,5 +101,13 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    <testResources>
+      <testResource>
+        <directory>${project.basedir}/src/test/resources</directory>
+      </testResource>
+      <testResource>
+        <directory>${project.basedir}/src/main/resources</directory>
+      </testResource>
+    </testResources>
   </build>
 </project>
